Documented new API bindings
