# src/api/project/api/handler_project_api.go
@@ -16,7 +16,17 @@ type ProjectHandler struct {
 	domain.Service
 }
 
-//GetAll handler
+// GetAll ProjectGetter godoc
+// @Summary      Get all projects
+// @Description  Get all the projects in the system
+// @Tags         Projects
+// @Accept       json
+// @Produce      json
+// @Param        task body dto.Project true "Get all projects"
+// @Success      200  {object}  dto.Project
+// @Failure      422  {object}	errors.ErrResponse
+// @Failure      500  {object}	errors.ErrResponse
+// @Router       /projects [get]
 func (dh *ProjectHandler) GetAll(g *gin.Context) {
 
 	dm, err := dh.Service.GetAll(g)
@@ -28,7 +38,17 @@ func (dh *ProjectHandler) GetAll(g *gin.Context) {
 	g.JSON(http.StatusOK, dto.MapToProjects(dm))
 }
 
-//GetByID handler
+// GetByID ProjectGetterByID godoc
+// @Summary      Get a project
+// @Description  Get a specific project based on it's ID
+// @Tags         Projects
+// @Accept       json
+// @Produce      json
+// @Param        task body dto.Project true "Get a project"
+// @Success      200  {object}  dto.Project
+// @Failure      422  {object}	errors.ErrResponse
+// @Failure      500  {object}	errors.ErrResponse
+// @Router       /projects/:id [get]
 func (dh *ProjectHandler) GetByID(g *gin.Context) {
 
 	dm, err := dh.Service.GetById(g, g.Param("id"))
@@ -76,17 +96,17 @@ func (ph *ProjectHandler) Post(g *gin.Context) {
 
 }
 
-// Patch ProjectUpdater godoc
-// @Summary      Update a project
-// @Description  Update a project that is already in the system
+// Patch ProjectStateUpdater godoc
+// @Summary      Update a project's state
+// @Description  Update a project's state that is already in the system
 // @Tags         Projects
 // @Accept       json
 // @Produce      json
-// @Param        task body dto.Project true "Update a project"
+// @Param        task body dto.Project true "Update a project's state"
 // @Success      200  {object}  dto.Project
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
-// @Router       /projects [patch]
+// @Router       /projects/:id/state [patch]
 func (ph *ProjectHandler) Patch(g *gin.Context) {
 
 	dp := dto.Project{}
@@ -132,7 +152,7 @@ func (ph *ProjectHandler) Patch(g *gin.Context) {
 // @Success      200  {object}  dto.Project
 // @Failure      422  {object}	errors.ErrResponse
 // @Failure      500  {object}	errors.ErrResponse
-// @Router       /projects [put]
+// @Router       /projects/:id [put]
 func (ph *ProjectHandler) Put(g *gin.Context) {
 
 	dp := dto.Project{}
